--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     </div>
                     <!--Слайдер-->
                     <div class="Slides Slider-col">
-                        <img src="../images/GitHub-Logo.png">
+                        <img src="Images/GitHub-Logo.png">
                     </div>
                     <div class="Slides Slider-col">
-                        <img src="../images/TeamWork.png">
+                        <img src="Images/TeamWork.png">
                     </div>
                     <!--Кнопки вперед-->
                     <div class="Slider-col">
