Добавлено описание ЛР3

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                     </div>
                     <!--Слайдер-->
                     <div class="Slides Slider-col">
-                        <img src="Images/GitHub-Logo.png">
+                        <img src="images/GitHub-Logo.png">
                     </div>
                     <div class="Slides Slider-col">
-                        <img src="Images/TeamWork.png">
+                        <img src="images/TeamWork.png">
+                    </div>
+                    <div class="Slides Slider-col">
+                        <img src="images/Cisco.png">
                     </div>
                     <!--Кнопки вперед-->
                     <div class="Slider-col">
@@ -39,6 +42,7 @@
             <div class="button">
                 <span class="buttons" onclick="show(1)"></span>
                 <span class="buttons" onclick="show(2)"></span>
+                <span class="buttons" onclick="show(3)"></span>
             </div>
         </div>
         <div class="right">
