--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     </div>
                     <!--Слайдер-->
                     <div class="Slides Slider-col">
-                        <img src="images/GitHub-Logo.png">
+                        <img src="Images/GitHub-Logo.png">
                     </div>
                     <div class="Slides Slider-col">
-                        <img src="images/TeamWork.png">
+                        <img src="Images/TeamWork.png">
                     </div>
                     <div class="Slides Slider-col">
-                        <img src="images/Cisco.png">
+                        <img src="Images/Cisco.png">
                     </div>
                     <!--Кнопки вперед-->
                     <div class="Slider-col">
